# israel-nadlan-data

./: .agent-plan.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  DATA-LICENSE.md  LIMITATIONS.md  METHODOLOGY.md  QA.md  README.md  SCHEMA.md  SOURCES.md  geography_reference.csv  llms.txt  locality_crosswalk.csv  manifest.json  pyproject.toml  rent_benchmarks.csv
.github/: pr-agent-context-template.md
.github/workflows/: ci.yml  pr-agent-context-refresh.yml
docs/: release_process.md
docs/patch/: 01_overview_and_execution_plan.md  02_repo_patch_spec.md  03_schema_and_data_model_redesign.md  04_rights_licensing_and_provenance_plan.md  05_documentation_pack_spec.md  06_data_expansion_and_release_checklist.md
metadata/: data_dictionary.csv  manifest.json  release_files.csv  source_inventory.csv
scripts/: build_release_metadata.py  validate_release.py
tests/: test_validate_release.py
