[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "israel-nadlan-data"
version = "0.2.0"
description = "Validation and metadata helpers for the israel-nadlan-data repository."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = false
